WIP: Fixed some minor alignment and styling issues

--- a/src/main/resources/cssFiles/gameModeSelector.css
+++ b/src/main/resources/cssFiles/gameModeSelector.css
@@ -97,8 +97,9 @@
 	-fx-font-size: 15;
 }
 
-.checkbox {
+.check-box {
 	-fx-font-size: 15;
+	-fx-text-fill: #dddddd;
 }
 
 .separator{
